--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "express": "^4.17.1",
     "express-xml-bodyparser": "^0.3.0",
     "helmet": "^3.23.2",
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.4",
     "typescript": "^3.9.5",
@@ -48,7 +50,7 @@
     "watch": [
       "*.ts"
     ],
-    "exec": "npm run nodemon-exec",
+    "exec": "PORT=8086 npm run nodemon-exec",
     "ext": "ts"
   },
   "devDependencies": {
