--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "prebuild": "npm run clean && npm run init",
     "build": "node_modules/typescript/bin/tsc",
     "start": "node ./dist",
-    "heroku-postbuild": "npm run build",
-    "stage": "node ./dist"
+    "heroku-postbuild": "npm run build"
   },
   "engines": {
     "node": "12.13.1"
@@ -30,14 +29,18 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "date-fns": "^2.14.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-xml-bodyparser": "^0.3.0",
     "helmet": "^3.23.2",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
+    "mongoose": "^5.9.24",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.4",
+    "shortid": "^2.2.15",
     "typescript": "^3.9.5",
+    "uuid": "^8.2.0",
     "xml2json": "^0.12.0"
   },
   "nodemonConfig": {
@@ -50,10 +53,11 @@
     "watch": [
       "*.ts"
     ],
-    "exec": "PORT=8086 npm run nodemon-exec",
+    "exec": "npm run nodemon-exec",
     "ext": "ts"
   },
   "devDependencies": {
-    "@types/express-xml-bodyparser": "^0.3.1"
+    "@types/express-xml-bodyparser": "^0.3.1",
+    "@types/mongoose": "^5.7.32"
   }
 }
