--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.17.1",
     "express-xml-bodyparser": "^0.3.0",
     "helmet": "^3.23.2",
+    "lru-cache": "^6.0.0",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "mongoose": "^5.9.24",
@@ -63,6 +64,7 @@
   "devDependencies": {
     "@types/cheerio": "^0.22.21",
     "@types/express-xml-bodyparser": "^0.3.1",
+    "@types/lru-cache": "^5.1.0",
     "@types/mongoose": "^5.7.32",
     "@types/puppeteer": "^3.0.1"
   }
