--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "devDependencies": {
     "@types/cheerio": "^0.22.21",
     "@types/express-xml-bodyparser": "^0.3.1",
+    "@types/lodash": "^4.14.158",
     "@types/lru-cache": "^5.1.0",
     "@types/mongoose": "^5.7.32",
     "@types/puppeteer": "^3.0.1"
