--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "shortid": "^2.2.15",
     "typescript": "^3.9.5",
     "uuid": "^8.2.0",
-    "xml2json": "^0.12.0"
+    "xml2json": "^0.12.0",
+    "youtube-dl": "^3.0.2"
   },
   "nodemonConfig": {
     "ignore": [
@@ -70,6 +71,7 @@
     "@types/lru-cache": "^5.1.0",
     "@types/mongoose": "^5.7.32",
     "@types/puppeteer": "^3.0.1",
+    "@types/youtube-dl": "^3.0.0",
     "grunt-apidoc": "^0.11.0"
   },
   "apidoc": {
