--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-xml-bodyparser": "^0.3.0",
+    "he": "^1.2.0",
     "helmet": "^3.23.2",
     "lru-cache": "^6.0.0",
     "m3u8stream": "^0.7.1",
@@ -67,6 +68,7 @@
   "devDependencies": {
     "@types/cheerio": "^0.22.21",
     "@types/express-xml-bodyparser": "^0.3.1",
+    "@types/he": "^1.1.1",
     "@types/lodash": "^4.14.158",
     "@types/lru-cache": "^5.1.0",
     "@types/mongoose": "^5.7.32",
