--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "me",
   "license": "ISC",
   "dependencies": {
+    "@line/bot-sdk": "^7.2.0",
     "@types/body-parser": "^1.19.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
