--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^14.14.30",
     "@types/node-fetch": "^2.5.8",
     "@types/xml2json": "^0.11.3",
+    "agenda": "^4.1.3",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.5",
