--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "@types/lru-cache": "^5.1.0",
     "@types/mongoose": "^5.10.3",
     "@types/puppeteer": "^3.0.5",
+    "@types/shortid": "^0.0.29",
+    "@types/uuid": "^8.3.4",
     "@types/web-push": "^3.3.2",
     "@types/youtube-dl": "^3.0.0",
     "grunt-apidoc": "^0.11.0"
