--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
         "skipDefaultLibCheck": true,
         "skipLibCheck": true
     },
