--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "typescript": "^4.1.5",
     "uuid": "^8.3.2",
     "web-push": "^3.4.5",
-    "xml2json": "^0.12.0",
-    "youtube-dl": "^3.4.0"
+    "xml2json": "^0.12.0"
   },
   "nodemonConfig": {
     "ignore": [
@@ -78,7 +77,6 @@
     "@types/shortid": "^0.0.29",
     "@types/uuid": "^8.3.4",
     "@types/web-push": "^3.3.2",
-    "@types/youtube-dl": "^3.0.0",
     "grunt-apidoc": "^0.11.0"
   },
   "apidoc": {
