--- a/fly.toml
+++ b/fly.toml
@@ -14,6 +14,7 @@ processes = []
 #  web = "python KexoBOTNews.py"
 
 [env]
+  NODE_ENV = "production"
   PORT = "8080"
   # PUPPETEER_EXECUTABLE_PATH = "/usr/bin/chromium-browser"
 
