--- a/package.json
+++ b/package.json
@@ -9,48 +9,48 @@
     "clean": "rm -rf dist",
     "init": "mkdir dist",
     "prebuild": "npm run clean && npm run init",
-    "build": "node_modules/typescript/bin/tsc",
-    "start": "node ./dist",
-    "build:apidoc": "apidoc -i src/ -o dist/apidoc",
-    "heroku-postbuild": "npm run build && npm run build:apidoc"
+    "build": "node_modules/typescript/bin/tsc && apidoc -i src/ -o dist/apidoc",
+    "start": "node ./dist"
   },
   "engines": {
-    "node": "14.19.0"
+    "node": "18.17.1"
   },
   "author": "me",
   "license": "ISC",
   "dependencies": {
-    "@line/bot-sdk": "^7.5.2",
-    "@types/body-parser": "^1.19.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.11",
+    "@line/bot-sdk": "^7.7.0",
+    "@types/body-parser": "^1.19.3",
+    "@types/cookie-parser": "^1.4.4",
+    "@types/express": "^4.17.18",
     "@types/helmet": "0.0.47",
-    "@types/node": "^14.14.30",
-    "@types/node-fetch": "^2.5.8",
-    "@types/xml2json": "^0.11.3",
-    "agenda": "^4.1.3",
+    "@types/node-fetch": "^2.6.6",
+    "@types/xml2json": "^0.11.4",
+    "agenda": "^4.4.0",
+    "apidoc": "^1.2.0",
     "axios": "^0.27.2",
-    "body-parser": "^1.20.1",
-    "cheerio": "^1.0.0-rc.10",
+    "body-parser": "^1.20.2",
+    "cheerio": "1.0.0-rc.12",
     "chinese-conv": "^1.0.1",
-    "cookie-parser": "^1.4.5",
-    "dotenv": "^8.2.0",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^8.6.0",
     "express": "^4.18.2",
     "express-xml-bodyparser": "^0.3.0",
+    "form-data": "^4.0.0",
     "he": "^1.2.0",
     "helmet": "^3.23.3",
+    "lodash": "^4.17.21",
     "lru-cache": "^6.0.0",
     "m3u8stream": "^0.7.1",
     "moment": "^2.29.4",
-    "moment-timezone": "^0.5.37",
-    "mongoose": "^6.5.5",
-    "node-fetch": "^2.6.7",
-    "nodemon": "^2.0.19",
-    "puppeteer": "^5.5.0",
+    "moment-timezone": "^0.5.43",
+    "mongoose": "^6.12.0",
+    "node-fetch": "^2.7.0",
+    "nodemon": "^2.0.22",
+    "puppeteer": "^21.3.6",
     "shortid": "^2.2.16",
-    "typescript": "^4.8.2",
+    "typescript": "^4.9.5",
     "uuid": "^8.3.2",
-    "web-push": "^3.4.5",
+    "web-push": "^3.6.6",
     "xml2json": "^0.12.0"
   },
   "nodemonConfig": {
@@ -67,16 +67,15 @@
     "ext": "ts"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.24",
-    "@types/express-xml-bodyparser": "^0.3.2",
-    "@types/he": "^1.1.1",
-    "@types/lodash": "^4.14.168",
-    "@types/lru-cache": "^5.1.0",
-    "@types/mongoose": "^5.10.3",
-    "@types/puppeteer": "^3.0.5",
+    "@types/cheerio": "^0.22.32",
+    "@types/express-xml-bodyparser": "^0.3.3",
+    "@types/he": "^1.2.1",
+    "@types/lodash": "^4.14.199",
+    "@types/lru-cache": "^5.1.1",
+    "@types/node": "^18.17.1",
     "@types/shortid": "^0.0.29",
     "@types/uuid": "^8.3.4",
-    "@types/web-push": "^3.3.2",
+    "@types/web-push": "^3.6.1",
     "grunt-apidoc": "^0.11.0"
   },
   "apidoc": {
