feat: Enhance OpenAPI schemas and responses across multiple routes
- Added detailed schemas for Bahamut danmaku, Komica posts, and movie ratings.
- Improved response schemas to include descriptions and examples for clarity.
- Updated route descriptions to provide better context for API consumers.
- Introduced new schemas for city and theater information, including detailed responses for movie times and logs.
- Refactored existing schemas to ensure consistency and completeness in API documentation.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun --watch run src/index.ts",
+    "dev": "NODE_ENV=development bun --watch run src/index.ts",
     "clean": "rm -rf dist",
     "init": "mkdir dist",
     "prebuild": "bun run clean && bun run init",
