refactor: update dependencies and restructure application
- Changed puppeteer to puppeteer-core in package.json.
- Removed initSchedule call from Application class.
- Added new cron routes for Nico ranking and VieShow coming movies.
- Updated index.ts to export the application instance correctly.
- Simplified puppeteer utility by removing Vercel environment check.
- Adjusted TypeScript configuration for better compatibility.
- Modified Vercel configuration to use built files and added cron schedules.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
+    "target": "es2020",
+    "module": "commonjs",
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "noEmit": true,
+    "moduleResolution": "node",
+    "verbatimModuleSyntax": false,
+    "noEmit": false,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -22,7 +21,6 @@
     "esModuleInterop": true,
     "outDir": "./dist",
     "types": [
-      "bun-types",
       "node"
     ],
     "baseUrl": "./src",
