--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "moment-timezone": "^0.5.43",
     "mongoose": "^6.12.0",
     "node-fetch": "^2.7.0",
-    "puppeteer": "^21.3.6",
+    "puppeteer-core": "^24.22.0",
     "shortid": "^2.2.16",
     "typescript": "^5.9.2",
     "uuid": "^8.3.2",
