--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,24 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/index.ts",
+      "src": "dist/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/src/index.ts"
+      "dest": "/dist/index.js"
+    }
+  ],
+  "crons": [
+    {
+      "path": "/cron/nico-ranking",
+      "schedule": "0 9,18,23 * * *"
+    },
+    {
+      "path": "/cron/vieshow-coming",
+      "schedule": "0 16 * * *"
     }
   ]
 }
