--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "mechakucha-api",
   "version": "2.0.12",
   "description": "亂七八糟 API",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "dev": "NODE_ENV=development bun --watch run src/index.ts",
+    "clean": "rm -rf dist",
+    "init": "mkdir dist",
+    "prebuild": "bun run clean && bun run init",
+    "build": "bun build src/index.ts --outdir ./dist --target node",
     "start": "bun ./dist"
   },
   "engines": {
