refactor: update build process and remove cron routes
- Changed build command in package.json to use TypeScript compiler (tsc) instead of bun.
- Updated start command to run the compiled JavaScript file with Node.js.
- Removed deprecated cron routes and their associated logic from the application.
- Adjusted application initialization to start the schedule after the server starts.
- Updated TypeScript configuration for better module resolution and output settings.
- Modified HTTP client utility to include type annotations for better type safety.
- Updated Vercel configuration to correctly point to the built application.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "clean": "rm -rf dist",
     "init": "mkdir dist",
     "prebuild": "bun run clean && bun run init",
-    "build": "bun build src/index.ts --outdir ./dist --target node",
-    "start": "bun ./dist"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "engines": {
     "node": "22"
