--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "clean": "rm -rf dist",
     "init": "mkdir dist",
     "prebuild": "bun run clean && bun run init",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "build": "bun build src/index.ts --outdir ./dist --target node",
+    "start": "bun ./dist"
   },
   "engines": {
     "node": "22"
