--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,11 @@
       "src": "/(.*)",
       "dest": "dist/index.js"
     }
+  ],
+  "crons": [
+    {
+      "path": "/eplus/wbc/notify",
+      "schedule": "*/10 * * * *"
+    }
   ]
 }
