chore: 移除不再使用的 cron 任務

--- a/vercel.json
+++ b/vercel.json
@@ -12,10 +12,5 @@
       "dest": "dist/index.js"
     }
   ],
-  "crons": [
-    {
-      "path": "/eplus/wbc/notify",
-      "schedule": "*/10 * * * *"
-    }
-  ]
+  "crons": []
 }
